Related tdf#94557: Combo box entries are case-sensitive (sometimes)

Revert partly http://cgit.freedesktop.org/libreoffice/core/commit/?id=76f33f10309b0ee384a75a7a854858b068d60495
author	Julien Nabet <serval2412@yahoo.fr>	2015-03-16 21:31:23 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2015-03-26 14:14:44 (GMT)
commit	76f33f10309b0ee384a75a7a854858b068d60495 (patch)
tree	e12e3b6f2ca46cb9998b93b5c1bb3406408ad3cb
parent	6c4100cf81e1678ff386549c0cdaa2f73a154ddc (diff)
tdf#67990: Management of case in combobox

See comments of tdf#94557 for more information

Change-Id: I0432db0c3f76c20e55d8fecb69734952dc0cf53b
Reviewed-on: https://gerrit.libreoffice.org/19260
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 7ca450cbe524807d51893382fcaa0d1a47c939c6)