wizards/com/sun/star/wizards/web/FTPDialog.py
@@ -312,7 +312,7 @@ class FTPDialog(UnoDialog2, UIConsts):
         self.setEnabled(self.btnTestConnection, True)
 
 
-    # To try the conenction I do some actions that
+    # To try the connection I do some actions that
     # seem logical to me: <br/>
     # I get a ucb content.
     # I list the files in this content.
